Keep ThreadSpecificCPA out of CPAsTest and use ImmutableList in it